cmake_minimum_required(VERSION 3.21)
project(practice)

set(CMAKE_CXX_STANDARD 14)

add_executable(practice
        ABC_007_C_幅優先探索.cpp
        ABC_051_B_Sum_of_Three_Integers.cpp
        ABC_054_C_One-stroke_Path.cpp
        ABC_076_C_Dubious_Document_2.cpp
        ABC_079_C_Train_Ticket.cpp
        ABC_085_C_Otoshidama.cpp
        ABC_223_D_Restricted_Permutation.cpp
        ARC_004_A_The_longest_distance.cpp
        ARC_029_A_高橋君とお肉.cpp
        ARC_061_C_たくさんの数式.cpp
        ATC_001_A_深さ優先探索.cpp
        キーエンス_プログラミング_コンテスト_2020_B_Robot_Arms.cpp)

add_executable(ABC_051_B_Sum_of_Three_Integers ABC_051_B_Sum_of_Three_Integers.cpp)